# pytest-difftest

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW_PLAN.md  pyproject.toml
.claude/commands/: ship.md
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md
python/pytest_diff/: _core.pyi  _storage_ops.py  cli.py  plugin.py
python/pytest_diff/storage/: __init__.py  base.py  local.py  s3.py
python/tests/: conftest.py  test_baseline.py  test_baseline_mode.py  test_diff_mode.py  test_edge_cases.py  test_end_to_end.py  test_plugin_config.py  test_rust_core.py  test_storage.py  test_xdist.py
rust/: Cargo.toml
rust/src/: database.rs  fingerprint.rs  fingerprint_cache.rs  lib.rs  parser.rs  schema.sql  types.rs
